--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -93,7 +93,7 @@ nav li:hover {
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: flex-start;
     flex-grow: 1;
 
