--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -93,7 +93,7 @@ nav li:hover {
 main {
     display: flex;
     flex-wrap: wrap;
-    justify-content: flex-start;
+    justify-content: center;
     align-items: flex-start;
     flex-grow: 1;
 
@@ -106,7 +106,7 @@ main {
     margin: 1em;
     border-radius: 3px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
-    flex-basis: calc(33.33% - 2em);
+    flex-basis: calc(80% - 2em);
 }
 
 @media (max-width: 767px) {
