--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -106,11 +106,12 @@ main {
     margin: 1em;
     border-radius: 3px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
-    flex-basis: calc(80% - 2em);
+    flex-grow: 1;
+    width: calc(33.33% - 2em); /* optional: setzt die Breite der Karte auf 33,33%, wenn sie das Flex-Container nicht ausfüllt */
 }
 
 @media (max-width: 767px) {
     .card {
-        flex-basis: calc(50% - 2em);
+        width: calc(50% - 2em); /* optional: setzt die Breite der Karte auf 50%, wenn sie das Flex-Container nicht ausfüllt */
     }
 }
