--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -20,7 +20,7 @@ html {
     html {
         /* http://bg.siteorigin.com/ */
         background-color: #669ac4;
-        background-image: url(img/background.png);
+        background-image: url(img/image-2dob4qb0.png);
 
         font-size: 11pt;
     }
@@ -116,8 +116,6 @@ main {
     }
 }
 
-.my-box {
-    background-color: green;
-}
+
 
 
