--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -19,7 +19,7 @@ html {
 @media (min-width: 40em) {
     html {
         /* http://bg.siteorigin.com/ */
-        background-color: #669ac4;
+        background-color: #404040;
         /*background-image: url(/img/Users/usersDesktop/image-2dob4qb0.png);*/
 
         font-size: 11pt;
