--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -37,7 +37,7 @@ html {
 
         border: 1px solid #202020;
         box-shadow: 1px 1px 3px rgba(0,0,0, 0.5);
-        background-color: #f2f2f2; 
+        background-color: rgb(103, 197, 231); 
     }
 }
 
