--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -96,22 +96,24 @@ main {
     justify-content: space-between;
   }
   
-  .card {
+  .main .card {
     background-color: white;
     padding: 1em;
-    margin: 1em 0;
+    margin: 1em;
     border-radius: 3px;
     box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
-    flex-basis: calc(33.33% - 1em); /* Breite auf 33.33% setzen und Abstand zwischen den Cards abziehen */
-    max-width: calc(33.33% - 1em); /* Maximale Breite auf 33.33% setzen und Abstand zwischen den Cards abziehen */
+    flex-basis: calc(33.33% - 2em);
+    max-width: calc(33.33% - 2em);
+    box-sizing: border-box;
   }
   
   @media (max-width: 767px) {
-    .card {
-      flex-basis: calc(50% - 1em); /* Breite auf 50% setzen und Abstand zwischen den Cards abziehen */
-      max-width: calc(50% - 1em); /* Maximale Breite auf 50% setzen und Abstand zwischen den Cards abziehen */
+    .main .card {
+      flex-basis: calc(50% - 2em);
+      max-width: calc(50% - 2em);
     }
   }
+  
 
   
   
