--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -96,7 +96,7 @@ main {
     justify-content: space-between;
   }
   
-  .main .card {
+  .card {
     background-color: white;
     padding: 1em;
     margin: 1em;
@@ -104,15 +104,15 @@ main {
     box-shadow: 0px 2px 5px rgba(0,0,0,0.1);
     flex-basis: calc(33.33% - 2em);
     max-width: calc(33.33% - 2em);
-    box-sizing: border-box;
-  }
-  
-  @media (max-width: 767px) {
-    .main .card {
-      flex-basis: calc(50% - 2em);
-      max-width: calc(50% - 2em);
+}
+
+@media (max-width: 767px) {
+    .card {
+        flex-basis: calc(50% - 2em);
+        max-width: calc(50% - 2em);
     }
-  }
+}
+
   
 
   
