--- a/Frontend/src/app.css
+++ b/Frontend/src/app.css
@@ -20,7 +20,7 @@ html {
     html {
         /* http://bg.siteorigin.com/ */
         background-color: #a2a2a2;
-        /*background-image: url(/img/Users/usersDesktop/image-2dob4qb0.png);*/
+        background-image: url(img/filmverleihbackgroundnew.jpg);
 
         font-size: 11pt;
     }
@@ -37,7 +37,7 @@ html {
 
         border: 1px solid #202020;
         box-shadow: 1px 1px 3px rgba(0,0,0, 0.5);
-        background-color: rgb(199, 235, 249); 
+        background-color: rgba(182, 184, 187, 0.911); 
     }
 }
 
